minor updates to notebooks

--- a/notebook/3_POS_Tagging.ipynb
+++ b/notebook/3_POS_Tagging.ipynb
@@ -337,6 +337,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's define the pieces that we'll \n",
+    "# need for the model\n",
+    "\n",
+    "# we'll start with an embedding layer\n",
+    "# the input size is the size of our vocabulary \n",
+    "# (we'll need a row for every word in the input)\n",
+    "# and the output size is the dimension that\n",
+    "# we'll want for our word vectors\n",
+    "embedding = Embedding(num_embeddings=vocab_size, embedding_dim=100)\n",
+    "\n",
+    "# once we've converted our tokens to \n",
+    "# vectors via an embedding layer, we'll\n",
+    "# want to run a sequence of these vectors\n",
+    "# through an LSTM layer. The input size of\n",
+    "# the LSTM is our embedding dimension, \n",
+    "# and the hidden dimension can be chosen by us\n",
+    "\n",
+    "lstm = LSTM(input_size=100, hidden_size=50)\n",
+    "\n",
+    "# because the forward pass of the LSTM\n",
+    "# requires the hidden state from the previous\n",
+    "# step as input, we'll have to initialize\n",
+    "# the hidden state vectors. this will\n",
+    "# need to be done at the beginning of each iteration\n",
+    "# before we run any new sequence through the LSTM\n",
+    "\n",
+    "h0 = torch.zeros(1, 1, 50)\n",
+    "c0 = torch.zeros(1, 1, 50)\n",
+    "lstm_hidden = h0, c0\n",
+    "\n",
+    "# we'll be taking the last output of \n",
+    "# the LSTM sequence which will be the \n",
+    "# same dimension as the hidden layer.\n",
+    "# We'll then need a single linear layer \n",
+    "# to act as a classifier. The input size \n",
+    "# should then be the same as the hidden dim \n",
+    "# of the LSTM, and the output size should be \n",
+    "# the same as out number of classes for the \n",
+    "# classification task\n",
+    "\n",
+    "linear = Linear(50, label_size)\n",
+    "\n",
+    "# lastly, we'll want to normalize the final output\n",
+    "# to a softmax distribution\n",
+    "\n",
+    "softmax = LogSoftmax(dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
