completed stubs for 1-3

--- a/notebook/1_Perceptron-STUB.ipynb
+++ b/notebook/1_Perceptron-STUB.ipynb
@@ -410,21 +410,23 @@
     "# Create a linear single linear layer, \n",
     "# with input shape of our feature space \n",
     "# and output shape of 1 (binary classification)\n",
-    "linear = Linear(max_features, 1, bias=True)\n",
+    "# TODO: Create a linear layer\n",
     "\n",
     "# Create a instance of the sigmoid function\n",
     "# so we can normalize our output to the range [0,1]\n",
-    "sigmoid = Sigmoid()\n",
+    "# TODO: Create a sigmoid Transformer\n",
     "\n",
     "# Binary cross entropy is an appropriate loss function \n",
     "# for this type of problem, and is implemented in the \n",
     "# `BCELoss` class in pytroch\n",
-    "criterion = BCELoss()\n",
+    "# TODO: Create an instance of BCELoss()\n",
     "\n",
     "# We'll use basic stochastic gradient descent\n",
     "# to optimize the parameters of our linear layer \n",
     "# (the sigmoid is a transformation with no parameters)\n",
-    "optim = SGD(params=linear.parameters(), lr=0.01)"
+    "# TODO: Create an SGD ptimizer and initialize it with \n",
+    "# the parameters of the linear layer, and a learning\n",
+    "# rate of 0.01"
    ]
   },
   {
@@ -442,24 +444,24 @@
     "# the objects above\n",
     "\n",
     "# grab a single example\n",
-    "f = features[0]\n",
-    "t = labels[0]\n",
+    "f = #TODO\n",
+    "t = #TODO\n",
     "\n",
     "# conver the example to tensors\n",
-    "X = torch.FloatTensor(f)\n",
-    "y = torch.FloatTensor(t)\n",
+    "X = #TODO\n",
+    "y = #TODO\n",
     "print(\"Shape of feature tensor:\", X.shape)\n",
     "\n",
     "# pass the input tensor through the linear layer\n",
-    "linear_output = linear.forward(X)\n",
+    "linear_output = #TODO\n",
     "print(\"Shape of linear_output:\", linear_output.shape)\n",
     "\n",
     "# take the sigmoid of the linear output\n",
-    "sigmoid_output = sigmoid(linear_output)\n",
+    "sigmoid_output = #TODO\n",
     "print(\"Value of sigmoid_output:\", sigmoid_output)\n",
     "\n",
     "# calculat the loss w.r.t. the expected value\n",
-    "loss = criterion(sigmoid_output.view(1,-1), y)\n",
+    "loss = #TODO\n",
     "print(\"Value of loss:\", loss)\n",
     "\n",
     "# calculate the gradients\n",
@@ -750,21 +752,19 @@
     "# Create a linear single linear layer, \n",
     "# with input shape of our feature space \n",
     "# and output shape of 1 (binary classification)\n",
-    "linear = Linear(max_features, label_size, bias=True)\n",
+    "# TODO: Create a Linear layer with appropriate input\n",
+    "# and output sizes\n",
     "\n",
     "# Create a instance of the sigmoid function\n",
     "# so we can normalize our output to the range [0,1]\n",
-    "softmax = LogSoftmax(dim=1)\n",
+    "# TODO: Create an instance of LogSoftmax\n",
+    "# Hint: Set dim= 1 on initialization\n",
     "\n",
-    "# Binary cross entropy is an appropriate loss function \n",
-    "# for this type of problem, and is implemented in the \n",
-    "# `BCELoss` class in pytorch\n",
-    "criterion = NLLLoss()\n",
-    "\n",
-    "# We'll use basic stochastic gradient descent\n",
-    "# to optimize the parameters of our linear layer \n",
-    "# (the sigmoid is a transformation with no parameters)\n",
-    "optim = SGD(params=linear.parameters(), lr=0.01)"
+    "# negative Log Loss in conjunction with the above \n",
+    "# LogSoftmax is an appropriate setup for multiclass\n",
+    "# classification, and is implemented in the \n",
+    "# `NLLLoss` class in pytorch\n",
+    "# TODO: Create an instance of Negative Log Loss"
    ]
   },
   {
@@ -783,27 +783,27 @@
     "\n",
     "# cast the features and targets\n",
     "# as torch tensors\n",
-    "X = torch.FloatTensor(f)\n",
-    "y = torch.LongTensor(t)\n",
+    "X = #TODO\n",
+    "y = #TODO\n",
     "print(\"Features Tensor Shape:\", X.shape)\n",
     "print(\"Features Tensor Shape:\", y.shape)\n",
     "\n",
     "# pass the features tensor through the linear layer\n",
-    "linear_output = linear(X)\n",
+    "linear_output = #TODO\n",
     "print(\"Linear Output Shape:\", linear_output.shape)\n",
     "\n",
     "# pass the output from the linear\n",
     "# layer through the softmax\n",
-    "softmax_output = softmax(linear_output)\n",
+    "softmax_output = #TODO\n",
     "print(\"Softmax Output Shape:\", softmax_output.shape)\n",
     "\n",
     "# verify that the softmax actually sums to 1\n",
     "# HINT: use torch.exp (this is LogSoftmax) and torch.sum\n",
-    "softmax_normalization = torch.exp(softmax_output).sum()\n",
+    "softmax_normalization = #TODO\n",
     "print(\"Softmax Normalization:\", softmax_normalization)\n",
     "\n",
     "# calculate the loss\n",
-    "loss = criterion(softmax_output, y)\n",
+    "loss = #TODO\n",
     "print(\"Loss:\", loss.data)"
    ]
   },
