created stub for part 4

--- a/notebook/1_Perceptron.ipynb
+++ b/notebook/1_Perceptron.ipynb
@@ -430,6 +430,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
