--- a/notebook/4_MachineTranslation-STUB.ipynb
+++ b/notebook/4_MachineTranslation-STUB.ipynb
@@ -261,29 +261,29 @@
    "outputs": [],
    "source": [
     "# First we'll want to create an embedding layer for our encoder\n",
-    "enc_embedding = Embedding(num_embeddings=input_size, embedding_dim=100)\n",
+    "# TODO: create an encoder embedding layer\n",
     "\n",
     "# Next we'll want to create an LSTM for our encoder\n",
-    "enc_rnn = LSTM(input_size=100, hidden_size=50)\n",
+    "# TODO: create an LSTM for the encoder\n",
     "\n",
     "# Next we'll want to create an embedding layer for our decoder\n",
-    "dec_embedding = Embedding(num_embeddings=output_size, embedding_dim=100)\n",
+    "# TODO: create an embedding layer for the decoder\n",
     "\n",
     "# Next, create an LSTM for the decoder\n",
-    "dec_rnn = LSTM(input_size=100, hidden_size=50)\n",
+    "# TODO: create an LSTM for the decoder\n",
     "\n",
     "# When we read the output from the decoder network we'll\n",
     "# want to classify it as one of the words from the output corpus\n",
     "# to do this, we'll need a linear layer\n",
-    "dec_linear = Linear(50, output_size)\n",
+    "# TODO: create an linear layer for the decoder LSTM output\n",
     "\n",
     "# Lastly, we'll need an instance of LogSoftmax to convert the\n",
     "# output to a softmax distribution for feeding into NLLLoss\n",
-    "# Hint: Set dim=0 on initialization here\n",
-    "softmax = LogSoftmax(dim=1)\n",
+    "# Hint: Set dim=1 on initialization here\n",
+    "# TODO: create an instance of LogSoftmax\n",
     "\n",
     "# Create an instance of the NLLLoss\n",
-    "criterion = NLLLoss()"
+    "# TODO: create an instance of the NLLLoss"
    ]
   },
   {
@@ -297,27 +297,28 @@
     "output_seq = output_seqs[0]\n",
     "\n",
     "# convert these to torch tensors\n",
-    "input_seq_tensor = torch.LongTensor(input_seq)\n",
-    "output_seq_tensor = torch.LongTensor(output_seq)\n",
+    "input_seq_tensor = #TODO\n",
+    "output_seq_tensor = #TODO\n",
     "print(\"Input Sequence Tensor Shape:\", input_seq_tensor.shape)\n",
     "print(\"Output Sequence Tensor Shape:\", output_seq_tensor.shape)\n",
     "\n",
     "# pass the input sequence through the encoder embedding\n",
-    "enc_embedded = enc_embedding.forward(input_seq_tensor)\n",
+    "enc_embedded = #TODO\n",
     "print(\"Encoder Embedded Sequence Shape:\", enc_embedded.shape)\n",
     "\n",
     "# unsqueeze the embedding tensor to have a batch size of 1\n",
-    "enc_embedded_unsqueezed = enc_embedded.unsqueeze(1)\n",
+    "enc_embedded_unsqueezed = #TODO\n",
     "print(\"Encoder Embedded Sequence Shape (1 batch):\", enc_embedded.shape)\n",
     "\n",
     "# create initial hidden states for the encoder LSTM\n",
+    "# e.g. example for hidden dim of 50:\n",
     "h0 = torch.zeros(1, 1, 50)\n",
     "c0 = torch.zeros(1, 1, 50)\n",
     "enc_hidden = (h0, c0)\n",
     "    \n",
     "\n",
     "# pass the embedded input sequence through the encoder LSTM\n",
-    "enc_out, enc_hidden = enc_rnn(enc_embedded_unsqueezed, enc_hidden)\n",
+    "enc_out, enc_hidden = #\n",
     "print(\"Encoder Output Shape:\", enc_out.shape)\n",
     "print(\"Encoder Hidden Shape(s):\", enc_hidden[0].shape, enc_hidden[1].shape)\n",
     "\n",
@@ -326,11 +327,11 @@
     "dec_hidden = enc_hidden\n",
     "\n",
     "# pass the output sequence through the decoder embedding layer\n",
-    "dec_embedded = dec_embedding(output_seq_tensor)\n",
+    "dec_embedded = #TODO\n",
     "print(\"Decoder Embedded Sequence Shape:\", dec_embedded.shape)\n",
     "\n",
     "# unsqueeze the embedding tensor to have a batch size of 1\n",
-    "dec_embedded_unsqueezed = dec_embedded.unsqueeze(1)\n",
+    "dec_embedded_unsqueezed = #TODO\n",
     "print(\"Decoder Embedded Sequence Shape (1 batch):\", dec_embedded.shape)\n",
     "\n",
     "# Assuming only teacher forcing (running true answer as input to the decoder)\n",
@@ -338,35 +339,38 @@
     "# Note: we want to pass ALL BUT THE LAST elemebt of the output \n",
     "# sequence through the LSTM\n",
     "\n",
-    "dec_lstm_in = dec_embedded_unsqueezed[:-1]\n",
+    "# Create the input for the lstm in (all but the last element)\n",
+    "dec_lstm_in = #TODO\n",
     "print(\"Decoder LSTM Input Shape:\", dec_lstm_in.shape)\n",
     "\n",
-    "dec_out, dec_hidden = dec_rnn(dec_lstm_in, dec_hidden)\n",
+    "# Pass the decoder input through the decoder\n",
+    "dec_out, dec_hidden = #TODO\n",
     "print(\"Decoder Output Shape:\", dec_out.shape)\n",
     "print(\"Decoder Hidden Shape(s):\", dec_hidden[0].shape, dec_hidden[1].shape)\n",
     "\n",
     "# Now we want to run the decoder output through our decoder linear layer\n",
     "# Also, squeeze the batch dimension (dim=1) of the linear output to get rid of it\n",
-    "dec_linear_output = dec_linear(dec_out).squeeze(1)\n",
+    "dec_linear_output = #TODO\n",
     "print(\"Decoder Linear Output Shape:\", dec_linear_output.shape)\n",
     "\n",
     "# pass the decoder linear output through a softmax\n",
-    "dec_softmax_output = softmax(dec_linear_output)\n",
+    "dec_softmax_output = #TODO\n",
     "print(\"Decoder Softmax Output Shape:\", dec_softmax_output.shape)\n",
     "\n",
     "# verify that the decoder output distributions is _actually_ a softmax\n",
-    "dec_softmax_norms = torch.exp(dec_softmax_output).sum(dim=1)\n",
+    "# Hint: use torch.exp and torch.sum\n",
+    "dec_softmax_norms = #TODO\n",
     "print(\"Decoder Softmax Norms Shape:\", dec_softmax_norms.shape)\n",
     "print(\"Decoder Softmax Norms:\", dec_softmax_norms)\n",
     "\n",
     "# the targets for the loss function should be\n",
     "# ALL BUT THE FIRST element of the output sequence\n",
-    "dec_loss_target = output_seq_tensor[1:]\n",
+    "dec_loss_target = #TODO\n",
     "print(\"Decoder Loss Target Shape:\", dec_loss_target.shape)\n",
     "\n",
     "# Calculate the loss using the decoder softmax \n",
     "# output and the decoder loss target\n",
-    "loss = criterion(dec_softmax_output, dec_loss_target)\n",
+    "loss = #TODO\n",
     "print(\"Loss:\", loss.data)"
    ]
   },
